# m3dp_post_process

./: .coverage  .gitignore  .pre-commit-config.yaml  ACO_PERFORMANCE_IMPROVEMENTS.md  Makefile  PHASE_2_ROADMAP.md  README.md  RESEARCH_SUMMARY.md  SSH_TROUBLESHOOTING.md  TODO.md  bench.json  bench.local.json  convert-pdfs.sh  docker-compose.yml  m3dp_post_process.code-workspace  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  fix-permissions.sh
.github/: copilot-instructions.md
g-code/: optimized_3DBenchy_PLA_NoScripts.gcode
guide/: MINIMAL3DP_APP_GUIDE.md  Minimal 3DP Development Strategy Report.md  Minimal 3DP_ A Comprehensive Brand Specification and Technical Knowledge Base.md
m3dp_post_process/: aco_optimizer.py  bricklayers.py  gcode_processor.py  main.py  quality_optimizer.py
m3dp_post_process.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outputs/: optimized_3DBenchy_PLA_NoScripts.gcode  optimized_benchy.gcode
research/: 1-s2.0-S2212827117311472-main.md  131 Fundamental Path Optimization Strategies for E.md  2002.01631v1.md  3559400.3561999.md  5_Ant_Colony_Optimization.md  ACO for 3D Printing & Efficiency.md  An_Improved_Ant_Colony_Optimization_Algorithm_Based_on_Hybrid_Strategies_for_Scheduling_Problem (1).md  An_Improved_Ant_Colony_Optimization_Algorithm_Based_on_Hybrid_Strategies_for_Scheduling_Problem.md  An_effective_ant_colony_optimization_alg.md  Ant_Colony_Optimization_An_Overview.md  DesignforFFF-DVB07.md  FIBR3DEmul_an_open_access_simulation_sol.md  Feasibility.md  Fok - ACO Based Tool Path Optimizer.md  FullControl-GCode-Designer-Author-Version-3.md  IMECE2024_143962_ENHANCINGTHESTRUCTURALPERFORMANCEOF3DPRINTEDOBJECTSTHROUGHGCODEOPTIMIZATIONVIAFEAINTHEFDMPROCESS (1).md  Manuscript_for_IRIS.md  Mettu_ICRA_2016_preprint.md  Using artificial.md  jmmp-07-00128.md  (+15 more)
(+17 files in other folders)
