[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3dp-post-process"
version = "0.2.0"
description = "Research-backed G-code post-processing for FDM 3D printing optimization using Ant Colony Optimization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Minimal3DP Development Team", email = "contact@minimal3dp.com"}
]
keywords = ["3d-printing", "gcode", "optimization", "ant-colony", "fdm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "numpy>=1.26.0",
    "networkx>=3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "httpx>=0.25.0",  # For testing FastAPI
    "pre-commit>=3.5.0",
]
scripts = [
    "pymupdf>=1.24.0",  # PDF to markdown conversion
]

[tool.setuptools]
packages = ["m3dp_post_process"]

[tool.setuptools.package-data]
m3dp_post_process = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=m3dp_post_process --cov-report=term-missing"
